--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,14 @@
         android:layout_centerInParent="true"
         />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnOpenSecondActivity"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentBottom="false"
+        android:text="fghfghg ghjghjghjghjghjggfhjghjh jgj gj gjgjgj ghjhgj ghhghjjfghjgjgjghjg" />
+
 </RelativeLayout>
